--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=api
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=ganthan656@gmail.com
+spring.mail.username=chauhanyash20006@gmail.com
 spring.mail.password=iecd totj wmjk kwsc 
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
@@ -11,7 +11,7 @@ spring.mail.properties.mail.smtp.starttls.required=true
 
 spring.datasource.url=jdbc:mysql://localhost:3306/expense_management
 spring.datasource.username=root
-spring.datasource.password=griffin@2006
+spring.datasource.password=yash@2006
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
