--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.mail.properties.mail.smtp.starttls.required=true
 
 spring.datasource.url=jdbc:mysql://localhost:3306/expense_management
 spring.datasource.username=root
-spring.datasource.password=yash@2006
+spring.datasource.password=yash123@2006
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
